出力ボタン追加

--- a/index.html
+++ b/index.html
@@ -2,27 +2,17 @@
   <table width="300px" style="border-collapse: collapse;border:2px double #000000;background-color:#FFFFFF;color:#000000;text-align:left;">
     <tbody>
       <tr>
-        <th style="border:2px double #000000;background-color:#FFDEA4;color:#FFFFFF;text-align:center;">ポケモン</th>
-        <th style="border:2px double #000000;background-color:#FFDEA4;color:#FFFFFF;text-align:center;">特性</th>
-        <th style="border:2px double #000000;background-color:#FFDEA4;color:#FFFFFF;text-align:center;">持ち物</th>
-        <th style="border:2px double #000000;background-color:#FFDEA4;color:#FFFFFF;text-align:center;">技1</th>
-        <th style="border:2px double #000000;background-color:#FFDEA4;color:#FFFFFF;text-align:center;">技2</th>
-        <th style="border:2px double #000000;background-color:#FFDEA4;color:#FFFFFF;text-align:center;">技3</th>
-        <th style="border:2px double #000000;background-color:#FFDEA4;color:#FFFFFF;text-align:center;">技4</th>
-        <th style="border:2px double #000000;background-color:#FFDEA4;color:#FFFFFF;text-align:center;">備考</th>
+        <th style="border:2px double #000000;background-color:#FFDEA4;color:#000000;text-align:center;">ポケモン</th>
+        <th style="border:2px double #000000;background-color:#FFDEA4;color:#000000;text-align:center;">特性</th>
+        <th style="border:2px double #000000;background-color:#FFDEA4;color:#000000;text-align:center;">持ち物</th>
+        <th style="border:2px double #000000;background-color:#FFDEA4;color:#000000;text-align:center;">技1</th>
+        <th style="border:2px double #000000;background-color:#FFDEA4;color:#000000;text-align:center;">技2</th>
+        <th style="border:2px double #000000;background-color:#FFDEA4;color:#000000;text-align:center;">技3</th>
+        <th style="border:2px double #000000;background-color:#FFDEA4;color:#000000;text-align:center;">技4</th>
+        <th style="border:2px double #000000;background-color:#FFDEA4;color:#000000;text-align:center;">備考</th>
       </tr>
       <tr>
-        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-      </tr>
-      <tr>
-        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="6"></td>
         <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
         <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
         <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
@@ -32,17 +22,7 @@
         <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
       </tr>
       <tr>
-        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-      </tr>
-      <tr>
-        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="6"></td>
         <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
         <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
         <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
@@ -52,7 +32,7 @@
         <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
       </tr>
       <tr>
-        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="6"></td>
         <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
         <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
         <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
@@ -62,7 +42,27 @@
         <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
       </tr>
       <tr>
+        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="6"></td>
         <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+      </tr>
+      <tr>
+        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="6"></td>
+        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+      </tr>
+      <tr>
+        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="6"></td>
         <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
         <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
         <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
@@ -77,3 +77,7 @@
     <a href="http://sunafukey.fc2web.com/htmltag/tablelist.html" title="HTML表テンプレート" style="color:#C0C0C0;font-size:50%;text-decoration:none;">HTML表</a>
   </div>
 </div>
+<br><br>
+<button type="button" name="aaa" value="aaa">
+  <font size="5" color="#333399">出力</font>
+</button>
