タイトル追加

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<center>ぱ～てぃ～にてーぶるをつくるよ！</center>
 <div style="margin:0px;padding:0px;" align="center">
   <table width="300px" style="border-collapse: collapse;border:2px double #000000;background-color:#FFFFFF;color:#000000;text-align:left;">
     <tbody>
@@ -12,7 +13,7 @@
         <th style="border:2px double #000000;background-color:#FFDEA4;color:#000000;text-align:center;">備考</th>
       </tr>
       <tr>
-        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="6"></td>
+        <td style="border:2px double #000000;text-align:left;"><input type="text" name="name1" size="30" maxlength="6"></td>
         <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
         <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
         <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
@@ -78,6 +79,8 @@
   </div>
 </div>
 <br><br>
-<button type="button" name="aaa" value="aaa">
-  <font size="5" color="#333399">出力</font>
-</button>
+<center>
+  <button type="button" name="outoput" onClick="OnOutput" value="aaa">
+    <font size="5" color="#333399">出力</font>
+  </button>
+</center>
