--- a/index.html
+++ b/index.html
@@ -52,8 +52,95 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+        <center>ぱ～てぃてーぶるめーかー</center>
+        <div style="margin:0px;padding:0px;" align="center">
+          <table width="300px" style="border-collapse: collapse;border:2px double #000000;background-color:#FFFFFF;color:#000000;text-align:left;">
+            <tbody>
+              <tr>
+                <th style="border:2px double #000000;background-color:#FFDEA4;color:#000000;text-align:center;">ポケモン</th>
+                <th style="border:2px double #000000;background-color:#FFDEA4;color:#000000;text-align:center;">特性</th>
+                <th style="border:2px double #000000;background-color:#FFDEA4;color:#000000;text-align:center;">持ち物</th>
+                <th style="border:2px double #000000;background-color:#FFDEA4;color:#000000;text-align:center;">技1</th>
+                <th style="border:2px double #000000;background-color:#FFDEA4;color:#000000;text-align:center;">技2</th>
+                <th style="border:2px double #000000;background-color:#FFDEA4;color:#000000;text-align:center;">技3</th>
+                <th style="border:2px double #000000;background-color:#FFDEA4;color:#000000;text-align:center;">技4</th>
+                <th style="border:2px double #000000;background-color:#FFDEA4;color:#000000;text-align:center;">備考</th>
+              </tr>
+              <tr>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name1" size="30" maxlength="6"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+              </tr>
+              <tr>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="6"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+              </tr>
+              <tr>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="6"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+              </tr>
+              <tr>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="6"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+              </tr>
+              <tr>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="6"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+              </tr>
+              <tr>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="6"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+              </tr>
+            </tbody>
+          </table>
+          <div style="width:300px;" align="right">
+            <a href="http://sunafukey.fc2web.com/htmltag/tablelist.html" title="HTML表テンプレート" style="color:#C0C0C0;font-size:50%;text-decoration:none;">HTML表</a>
+          </div>
+        </div>
+        <br><br>
+        <center>
+          <button type="button" name="outoput" onClick="OnOutput" value="aaa">
+            <font size="5" color="#333399">出力</font>
+          </button>
+        </center>
+        <br>
+        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://reizeru.github.io/PTTableMaker/" data-text="Pokemon PTTableMaker" data-via="rei_zeru250">Tweet</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
       </div>
     </div>
