--- a/index.html
+++ b/index.html
@@ -67,18 +67,8 @@
                 <th style="border:2px double #000000;background-color:#FFDEA4;color:#000000;text-align:center;">備考</th>
               </tr>
               <tr>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name1" size="30" maxlength="6"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-              </tr>
-              <tr>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="6"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name1" size="10" maxlength="6"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="6"></td>
                 <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
                 <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
                 <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
@@ -87,18 +77,8 @@
                 <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
               </tr>
               <tr>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="6"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
-              </tr>
-              <tr>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="6"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="6"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="6"></td>
                 <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
                 <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
                 <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
@@ -107,8 +87,8 @@
                 <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
               </tr>
               <tr>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="6"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="6"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="6"></td>
                 <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
                 <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
                 <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
@@ -117,8 +97,28 @@
                 <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
               </tr>
               <tr>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="6"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="6"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="6"></td>
                 <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+              </tr>
+              <tr>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="6"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="6"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
+              </tr>
+              <tr>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="6"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="6"></td>
                 <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
                 <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
                 <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="30" maxlength="20"></td>
@@ -133,15 +133,10 @@
           </div>
         </div>
         <br><br>
-        <center>
-          <button type="button" name="outoput" onClick="OnOutput" value="aaa">
-            <font size="5" color="#333399">出力</font>
-          </button>
-        </center>
         <br>
-        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://reizeru.github.io/PTTableMaker/" data-text="Pokemon PTTableMaker" data-via="rei_zeru250">Tweet</a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">出力&raquo;</a></p>
+        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://reizeru.github.io/PTTableMaker/" data-text="Pokemon PTTableMaker" data-via="rei_zeru250">Tweet</a>
       </div>
     </div>
 
